[gd_scene load_steps=4 format=2]

[ext_resource path="res://startmenu/Atom.gd" type="Script" id=1]
[ext_resource path="res://Atom/Proton.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 289.503

[node name="Atom" type="Area2D"]
position = Vector2( 130, 250 )
rotation = -18.8496
scale = Vector2( 0.138168, 0.13382 )
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 0.0
script = ExtResource( 1 )

[node name="Graviation" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AtomSprite" type="Sprite" parent="Graviation"]
texture = ExtResource( 2 )

[node name="CollisionTimer" type="Timer" parent="."]
[connection signal="body_shape_entered" from="." to="." method="_on_Atom_body_shape_entered"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
